<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pybind_test</name>
  <version>0.6.2</version>
  <description>Maliput pybind11_test.</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>drake_vendor</depend>
  <depend>maliput</depend>
  <depend>pybind11-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
